--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>WebRTC App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -33,14 +33,10 @@
       <header className="App-header">
         Start your WebCam
       </header>
-      <span>
         <h3>Local</h3>
-        <video id="webcamVideo" autoPlay playsInline></video>
-      </span>
-      <span>
+        <video class="localvideo" id="webcamVideo" autoPlay playsInline></video>
         <h3>Remote</h3>
-        <video id="remoteVideo" autoPlay playsInline></video>
-      </span>
+        <video class="remotevideo" id="remoteVideo" autoPlay playsInline></video>
       <button id="webcamBtn">Start webcam</button>
       <h2>Create a new call</h2>
       <button id="callButton" disabled>Call</button>
