--- a/public/index.html
+++ b/public/index.html
@@ -33,17 +33,21 @@
       <header className="App-header">
         Start your WebCam
       </header>
-        <h3>Local</h3>
-        <video class="localvideo" id="webcamVideo" autoPlay playsInline></video>
-        <h3>Remote</h3>
-        <video class="remotevideo" id="remoteVideo" autoPlay playsInline></video>
       <button id="webcamBtn">Start webcam</button>
-      <h2>Create a new call</h2>
-      <button id="callButton" disabled>Call</button>
-      <h2>Join a call</h2>
-      <input id="callInput" />
-      <button id="answerBtn" disabled>Answer</button>
-      <button id="hangupBtn">Hangup</button>
+      <video class="localvideo" id="webcamVideo" autoPlay playsInline></video>
+    </div>
+    <div class="remote">
+      <video class="remotevideo" id="remoteVideo" autoPlay playsInline></video>
+    </div>
+    <div>
+        <h2>Create a new call</h2>
+        <button id="callButton" disabled>Call</button>
+        <h2>Join a call</h2>
+    </div>
+    <div>
+        <input id="callInput" />
+        <button id="answerBtn" disabled>Answer</button>
+        <button id="hangupBtn">Hangup</button>
     </div>
     <!--
       This HTML file is a template.
