--- a/public/index.html
+++ b/public/index.html
@@ -29,26 +29,29 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div className="App">
-      <header className="App-header">
-        Start your WebCam
-      </header>
-      <button id="webcamBtn">Start webcam</button>
-      <video class="localvideo" id="webcamVideo" autoPlay playsInline></video>
-    </div>
-    <div class="remote">
-      <video class="remotevideo" id="remoteVideo" autoPlay playsInline></video>
-    </div>
-    <div>
-        <h2>Create a new call</h2>
-        <button id="callButton" disabled>Call</button>
-        <h2>Join a call</h2>
-    </div>
-    <div>
+    <div class="Main">
+      <p class="header">WEB CALL</p>
+      <div class="App">
+        <div class="localCam">
+          <video class="localvideo" id="webcamVideo" autoPlay playsInline></video>
+        </div>
+        <div class="remoteCam">
+          <video class="remotevideo" id="remoteVideo" autoPlay playsInline></video>
+        </div>
+      </div>
+      
+      <div class="Call1">
+        <button Class="btn" id="webcamBtn">Start webcam</button>
+        <button Class="btn" id="callButton" disabled>Call</button>
+      </div>
+      <div class="Call">
+        <p class="CallHead">Join a call</p>
         <input id="callInput" />
         <button id="answerBtn" disabled>Answer</button>
         <button id="hangupBtn">Hangup</button>
+      </div>
     </div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
